migrator-tests/tests/snapshots/generate_old__oneway_migrations-8.snap
---
source: migrator-tests/tests/generate_old.rs
expression: fields_info.unwrap()
---
{
    "events": {},
    "fields": {
        "color": "DEFINE FIELD color ON crop TYPE string PERMISSIONS FULL",
        "id": "DEFINE FIELD id ON crop TYPE record<crop> PERMISSIONS FULL",
    },
    "indexes": {},
    "lives": {},
    "tables": {},
}
