migrator-tests/tests/snapshots/generate_old__oneway_migrations.snap
---
source: migrator-tests/tests/generate_old.rs
expression: "files.join(\"\\n\")"
---
test_migration.surql
