migrator-tests/tests/snapshots/generate_old__twoway_migrations.snap
---
source: migrator-tests/tests/generate_old.rs
expression: "files.join(\"\\n\\n\")"
---
test_migration.down.surql

test_migration.up.surql
